--- a/ipynb/dummy_data_generation.ipynb
+++ b/ipynb/dummy_data_generation.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set root package root directory.\n",
@@ -22,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from lib.utils.dummy_data_generation import *\n",
